chore: checkpoint